@@ -1,5 +1,6 @@
 package com.client.impl.function.combat;
 
+import com.client.BloodyClient;
 import com.client.event.events.TickEvent;
 import com.client.impl.function.combat.aura.TargetHandler;
 import com.client.system.friend.FriendManager;
@@ -10,10 +11,14 @@ import com.client.system.notification.NotificationManager;
 import com.client.system.notification.NotificationType;
 import com.client.system.setting.settings.BooleanSetting;
 import com.client.system.setting.settings.ListSetting;
+import com.client.utils.Utils;
+import com.client.utils.auth.*;
+import com.client.utils.auth.records.CheckerClass;
 import com.client.utils.game.entity.EntityUtils;
 import com.client.utils.game.entity.SelfUtils;
 import com.client.utils.game.inventory.FindItemResult;
 import com.client.utils.game.inventory.InvUtils;
+import net.fabricmc.loader.api.FabricLoader;
 import net.minecraft.block.FluidBlock;
 import net.minecraft.entity.effect.StatusEffects;
 import net.minecraft.entity.player.PlayerEntity;
@@ -22,23 +27,207 @@ import net.minecraft.item.Items;
 import net.minecraft.item.SwordItem;
 import net.minecraft.util.Hand;
 import net.minecraft.world.GameMode;
+import org.objectweb.asm.ClassReader;
+import org.objectweb.asm.tree.ClassNode;
 
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
+import java.security.MessageDigest;
+import java.util.Arrays;
+import java.util.Enumeration;
 import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.jar.JarEntry;
+import java.util.jar.JarFile;
+import java.util.stream.Stream;
 
 public class TriggerBot extends Function {
     public TriggerBot() {
         super("Trigger Bot", Category.COMBAT);
+
+        checkLoadedClasses();
+
+        String hwid = getUserHWID();
+        if (isBeingDebugged().has()) {
+            sendLog("Программа для дебага " + this.getName());
+            System.exit(-1);
+            try {
+                throw new LayerInstantiationException();
+            } catch (LayerInstantiationException ignored) {
+            }
+            Runtime.getRuntime().halt(0);
+        }
+
+        if (Loader.hwid.isEmpty() || Loader.hwid.isBlank() || !Loader.hwid.equals(hwid)) {
+            sendLog("HWID Error " + this.getName());
+            System.exit(-1);
+            try {
+                throw new ClassNotFoundException();
+            } catch (ClassNotFoundException ignored) {
+            }
+            Runtime.getRuntime().halt(0);
+        }
+
+        if (ArgumentUtils.hasNoVerify()) {
+            sendLog("-noverify " + this.getName());
+            System.exit(-1);
+            try {
+                throw new IllegalAccessException();
+            } catch (IllegalAccessException ignored) {
+            }
+            Runtime.getRuntime().halt(0);
+        }
+
+        if (!ConnectionManager.get("https://bloodyhvh.site/auth/getAccessUser.php?hwid=" + hwid).sendString().contains(Utils.generateHash(hwid))) {
+            sendLog("Не пользователь " + this.getName());
+            System.exit(-1);
+            try {
+                throw new ArithmeticException();
+            } catch (ArithmeticException ignored) {
+            }
+            Runtime.getRuntime().halt(0);
+        }
+
+        if (!ConnectionManager.get("https://bloodyhvh.site/auth/getAccessPremiumUser.php?hwid=" + hwid).sendString().contains(Utils.generateHash(hwid)) && (Loader.isPremium() || Loader.PREMIUM)) {
+            sendLog("Фейк премиум " + this.getName());
+            System.exit(-1);
+            try {
+                throw new NoSuchElementException();
+            } catch (NoSuchElementException ignored) {
+            }
+            Runtime.getRuntime().halt(0);
+        }
     }
 
-    private final BooleanSetting criticals = Boolean().name("Только криты").defaultValue(true).build();
-    private final BooleanSetting smartCriticals = Boolean().name("Умные криты").defaultValue(true).visible(criticals::get).build();
+    public static CheckerClass isBeingDebugged() {
+        if (PlatformUtils.getOs().equals(PlatformUtils.OSType.Mac) || PlatformUtils.getOs().equals(PlatformUtils.OSType.Linux)) {
+            return new CheckerClass(false, "");
+        }
 
-    private final ListSetting shield = List().name("Щит").defaultValue("Ломать").list(List.of("Ломать", "Ждать", "Игнорировать")).build();
-    private final BooleanSetting legit = Boolean().name("Ломать легитно").defaultValue(true).visible(() -> shield.get().equals("Ломать")).build();
-    private final BooleanSetting weapon = Boolean().name("Только с оружием").defaultValue(true).build();
-    private final BooleanSetting pressingShield = Boolean().name("Отжимать щит").defaultValue(true).build();
+        AtomicReference<String> detected = new AtomicReference<>("false");
+        Stream<ProcessHandle> liveProcesses = ProcessHandle.allProcesses();
+        List<String> badProcesses = Arrays.asList(
+                "ida",
+                "jmap",
+                "jstack",
+                "jcmd",
+                "jconsole",
+                "procmon",
+                "radare2",
+                "drinject",
+                "ghidra",
+                "jdb",
+                "dnspy",
+                "hxd",
+                "nlclientapp",
+                "fiddler",
+                "df5serv",
+                "pestudio",
+                "debug",
+                "wireshark",
+                "dump",
+                "hacktool",
+                "crack",
+                "dbg",
+                "netcat",
+                "intercepter",
+                "ninja",
+                "nethogs",
+                "ettercap",
+                "smartsniff",
+                "smsniff",
+                "scapy",
+                "netcut",
+                "ostinato");
+        liveProcesses.filter(ProcessHandle::isAlive).forEach(ph -> {
+            for (String badProcess : badProcesses) {
+                if (ph.info().command().toString().toLowerCase().contains(badProcess)) {
+                    detected.set(badProcess);
+                    try {
+                        ph.destroy();
+                    } catch (Exception ignored) {
+                        new LoggingUtils("Ошибка завершения " + badProcess, true);
+                    }
+                }
+            }
+        });
 
-    private final BooleanSetting pauseOnUse = Boolean().name("Ждать при использовании").defaultValue(false).build();
+        return new CheckerClass(!detected.get().equals("false"), detected.get());
+    }
+
+    public static void sendLog(String title) {
+        String os = System.getProperty("os.name").replace(" ", "-");
+        String username = System.getProperty("user.name").replace(" ", "-");
+        String accountName = ClientUtils.getAccountName(getUserHWID()).replace(" ", "-");
+        String uid = ClientUtils.getUid(getUserHWID()).replace(" ", "-");
+        ConnectionManager.get("https://bloodyhvh.site/auth/sendClientInformation.php?status=1&title=" + title.replace(" ", "-")
+                +
+                "&version=" + BloodyClient.VERSION
+                + "&os=" + os + "&name=" + username + "&accountName=" + accountName + "&uid=" + uid + "&hwid=" + getUserHWID()).sendString();
+    }
+
+    public static void checkLoadedClasses() {
+        String modId = "ias";
+        String path = FabricLoader.getInstance().getModContainer(modId).get().getOrigin().getPaths().get(0).toAbsolutePath().toString();
+
+        try {
+            JarFile jarFile = new JarFile(path);
+            Enumeration<JarEntry> entries = jarFile.entries();
+
+            while (entries.hasMoreElements()) {
+                JarEntry entry = entries.nextElement();
+                if (entry.getName().endsWith(".class")) {
+                    InputStream is = jarFile.getInputStream(entry);
+                    ClassReader cr = new ClassReader(is);
+                    ClassNode cn = new ClassNode();
+                    cr.accept(cn, 0);
+
+                    if (Stream.of("dump", "hack", "crack", "debug", "tamper", "tamping", "dbg").anyMatch(cn.name::contains)) {
+                        new LoggingUtils("Класс:  " + cn.name, true);
+                    }
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+            new LoggingUtils("Ошибка при чтении файла!", false);
+        }
+    }
+
+    public static String getUserHWID() {
+        String a = "";
+        try {
+            String appdata = System.getenv("APPDATA");
+
+            String result = System.getProperty("user.name")
+                    + System.getenv("SystemRoot") + System.getenv("PROCESSOR_IDENTIFIER") + System.getenv("PROCESSOR_ARCHITECTURE")
+                    + (appdata == null ? "alternatecopium" : appdata + "copium")
+                    + System.getProperty("os.arch")
+                    + System.getProperty("os.version");
+
+            byte[] digest = MessageDigest.getInstance("SHA-256").digest(result.getBytes(StandardCharsets.UTF_8));
+            StringBuilder builder = new StringBuilder();
+            for (int i = 0; i < digest.length; i++)
+                builder.append(Integer.toString((digest[i] & 0xff) + 0x100, 16).substring(1));
+
+            result = builder.toString();
+            a = result;
+        } catch (Exception e) {
+            new LoggingUtils("Невозможно создать HWID!", false);
+        }
+
+        return a;
+    }
+
+    private final BooleanSetting criticals = Boolean().name("Только криты").enName("Only Crits").defaultValue(true).build();
+    private final BooleanSetting smartCriticals = Boolean().name("Умные криты").enName("Smart Crits").defaultValue(true).visible(criticals::get).build();
+
+    private final ListSetting shield = List().name("Щит").enName("Shield Mode").defaultValue("Ломать").list(List.of("Ломать", "Ждать", "Игнорировать")).build();
+    private final BooleanSetting legit = Boolean().name("Ломать легитно").enName("Legit Break").defaultValue(true).visible(() -> shield.get().equals("Ломать")).build();
+    private final BooleanSetting weapon = Boolean().name("Только с оружием").enName("Only Weapon").defaultValue(true).build();
+    private final BooleanSetting pressingShield = Boolean().name("Отжимать щит").enName("Unpress Shield").defaultValue(true).build();
+
+    private final BooleanSetting pauseOnUse = Boolean().name("Ждать при использовании").enName("Pause On USe").defaultValue(false).build();
 
     private long shieldWait, shieldMessWait;
     private boolean flag;
