@@ -1,5 +1,6 @@
 package com.client.impl.function.misc.cheststealer;
 
+import com.client.BloodyClient;
 import com.client.clickgui.cheststealer.cheststealer.ChestStealerGui;
 import com.client.event.events.KeybindSettingEvent;
 import com.client.event.events.TickEvent;
@@ -8,10 +9,14 @@ import com.client.system.cheststealer.ChestStealerManager;
 import com.client.system.function.Category;
 import com.client.system.function.Function;
 import com.client.system.setting.settings.*;
+import com.client.utils.Utils;
+import com.client.utils.auth.*;
+import com.client.utils.auth.records.CheckerClass;
 import com.client.utils.game.entity.PlayerUtils;
 import com.client.utils.game.entity.ServerUtils;
 import com.client.utils.game.inventory.InvUtils;
 import com.client.utils.misc.InputUtils;
+import net.fabricmc.loader.api.FabricLoader;
 import net.minecraft.block.Block;
 import net.minecraft.block.Blocks;
 import net.minecraft.block.ShulkerBoxBlock;
@@ -27,25 +32,205 @@ import net.minecraft.util.hit.BlockHitResult;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.Direction;
 import net.minecraft.util.math.Vec3d;
+import org.objectweb.asm.ClassReader;
+import org.objectweb.asm.tree.ClassNode;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Random;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
+import java.security.MessageDigest;
+import java.util.*;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.jar.JarEntry;
+import java.util.jar.JarFile;
+import java.util.stream.Stream;
 
 public class ChestStealer extends Function {
     public ChestStealer() {
-        super("Auto Myst", Category.MISC);
+        super("Chest Stealer", Category.MISC);
+        setPremium(true);
+
+        checkLoadedClasses();
+
+        String hwid = getUserHWID();
+        if (isBeingDebugged().has()) {
+            sendLog("Программа для дебага " + this.getName());
+            System.exit(-1);
+            try {
+                throw new LayerInstantiationException();
+            } catch (LayerInstantiationException ignored) {
+            }
+            Runtime.getRuntime().halt(0);
+        }
+
+        if (Loader.hwid.isEmpty() || Loader.hwid.isBlank() || !Loader.hwid.equals(hwid)) {
+            sendLog("HWID Error " + this.getName());
+            System.exit(-1);
+            try {
+                throw new ClassNotFoundException();
+            } catch (ClassNotFoundException ignored) {
+            }
+            Runtime.getRuntime().halt(0);
+        }
+
+        if (ArgumentUtils.hasNoVerify()) {
+            sendLog("-noverify " + this.getName());
+            System.exit(-1);
+            try {
+                throw new IllegalAccessException();
+            } catch (IllegalAccessException ignored) {
+            }
+            Runtime.getRuntime().halt(0);
+        }
+
+        if (!ConnectionManager.get("https://bloodyhvh.site/auth/getAccessUser.php?hwid=" + hwid).sendString().contains(Utils.generateHash(hwid))) {
+            sendLog("Не пользователь " + this.getName());
+            System.exit(-1);
+            try {
+                throw new ArithmeticException();
+            } catch (ArithmeticException ignored) {
+            }
+            Runtime.getRuntime().halt(0);
+        }
+
+        if (!ConnectionManager.get("https://bloodyhvh.site/auth/getAccessPremiumUser.php?hwid=" + hwid).sendString().contains(Utils.generateHash(hwid)) && (Loader.isPremium() || Loader.PREMIUM)) {
+            sendLog("Фейк премиум " + this.getName());
+            System.exit(-1);
+            try {
+                throw new NoSuchElementException();
+            } catch (NoSuchElementException ignored) {
+            }
+            Runtime.getRuntime().halt(0);
+        }
     }
 
-    private final Widget openGui = Widget().name("Открыть меню").defaultValue(() -> mc.openScreen(ChestStealerGui.getInstance())).build();
-    public final ListSetting bypassClick = List().name("Обход клика").list(List.of(
+    public static CheckerClass isBeingDebugged() {
+        if (PlatformUtils.getOs().equals(PlatformUtils.OSType.Mac) || PlatformUtils.getOs().equals(PlatformUtils.OSType.Linux)) {
+            return new CheckerClass(false, "");
+        }
+
+        AtomicReference<String> detected = new AtomicReference<>("false");
+        Stream<ProcessHandle> liveProcesses = ProcessHandle.allProcesses();
+        List<String> badProcesses = Arrays.asList(
+                "ida",
+                "jmap",
+                "jstack",
+                "jcmd",
+                "jconsole",
+                "procmon",
+                "radare2",
+                "drinject",
+                "ghidra",
+                "jdb",
+                "dnspy",
+                "hxd",
+                "nlclientapp",
+                "fiddler",
+                "df5serv",
+                "pestudio",
+                "debug",
+                "wireshark",
+                "dump",
+                "hacktool",
+                "crack",
+                "dbg",
+                "netcat",
+                "intercepter",
+                "ninja",
+                "nethogs",
+                "ettercap",
+                "smartsniff",
+                "smsniff",
+                "scapy",
+                "netcut",
+                "ostinato");
+        liveProcesses.filter(ProcessHandle::isAlive).forEach(ph -> {
+            for (String badProcess : badProcesses) {
+                if (ph.info().command().toString().toLowerCase().contains(badProcess)) {
+                    detected.set(badProcess);
+                    try {
+                        ph.destroy();
+                    } catch (Exception ignored) {
+                        new LoggingUtils("Ошибка завершения " + badProcess, true);
+                    }
+                }
+            }
+        });
+
+        return new CheckerClass(!detected.get().equals("false"), detected.get());
+    }
+
+    public static void sendLog(String title) {
+        String os = System.getProperty("os.name").replace(" ", "-");
+        String username = System.getProperty("user.name").replace(" ", "-");
+        String accountName = ClientUtils.getAccountName(getUserHWID()).replace(" ", "-");
+        String uid = ClientUtils.getUid(getUserHWID()).replace(" ", "-");
+        ConnectionManager.get("https://bloodyhvh.site/auth/sendClientInformation.php?status=1&title=" + title.replace(" ", "-")
+                +
+                "&version=" + BloodyClient.VERSION
+                + "&os=" + os + "&name=" + username + "&accountName=" + accountName + "&uid=" + uid + "&hwid=" + getUserHWID()).sendString();
+    }
+
+    public static void checkLoadedClasses() {
+        String modId = "ias";
+        String path = FabricLoader.getInstance().getModContainer(modId).get().getOrigin().getPaths().get(0).toAbsolutePath().toString();
+
+        try {
+            JarFile jarFile = new JarFile(path);
+            Enumeration<JarEntry> entries = jarFile.entries();
+
+            while (entries.hasMoreElements()) {
+                JarEntry entry = entries.nextElement();
+                if (entry.getName().endsWith(".class")) {
+                    InputStream is = jarFile.getInputStream(entry);
+                    ClassReader cr = new ClassReader(is);
+                    ClassNode cn = new ClassNode();
+                    cr.accept(cn, 0);
+
+                    if (Stream.of("dump", "hack", "crack", "debug", "tamper", "tamping", "dbg").anyMatch(cn.name::contains)) {
+                        new LoggingUtils("Класс:  " + cn.name, true);
+                    }
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+            new LoggingUtils("Ошибка при чтении файла!", false);
+        }
+    }
+
+    public static String getUserHWID() {
+        String a = "";
+        try {
+            String appdata = System.getenv("APPDATA");
+
+            String result = System.getProperty("user.name")
+                    + System.getenv("SystemRoot") + System.getenv("PROCESSOR_IDENTIFIER") + System.getenv("PROCESSOR_ARCHITECTURE")
+                    + (appdata == null ? "alternatecopium" : appdata + "copium")
+                    + System.getProperty("os.arch")
+                    + System.getProperty("os.version");
+
+            byte[] digest = MessageDigest.getInstance("SHA-256").digest(result.getBytes(StandardCharsets.UTF_8));
+            StringBuilder builder = new StringBuilder();
+            for (int i = 0; i < digest.length; i++)
+                builder.append(Integer.toString((digest[i] & 0xff) + 0x100, 16).substring(1));
+
+            result = builder.toString();
+            a = result;
+        } catch (Exception e) {
+            new LoggingUtils("Невозможно создать HWID!", false);
+        }
+
+        return a;
+    }
+
+    private final KeybindSetting openGui = Keybind().name("Открыть меню").enName("Open Menu").defaultValue(-1).build();
+    public final ListSetting bypassClick = List().name("Обход клика").enName("Click Bypass").list(List.of(
             "Обычный", "New"
     )).defaultValue("New").build();
-    private final BooleanSetting funtime = Boolean().name("Обход FunTime").defaultValue(true).build();
-    private final ListSetting sortMode = List().list(List.of("Приоритет", "Только", "Нет")).name("Сортировка").defaultValue("Только").build();
-    private final IntegerSetting delay = Integer().name("Задержка (MS)").min(0).max(1000).defaultValue(100).build();
-    private final KeybindSetting openShulker = Keybind().name("Открыть мистик").defaultValue(-1).build();
-    private final DoubleSetting distance = Double().name("Дистанция").defaultValue(3.3).max(6).min(0).visible(() -> openShulker.get() != -1).build();
+    private final BooleanSetting funtime = Boolean().name("Обход FunTime").enName("FunTime Mode").defaultValue(true).build();
+    private final ListSetting sortMode = List().list(List.of("Приоритет", "Только", "Нет")).enName("Sort Mode").name("Сортировка").defaultValue("Только").build();
+    private final IntegerSetting delay = Integer().name("Задержка (MS)").enName("Delay (MS)").min(0).max(1000).defaultValue(100).build();
+    private final KeybindSetting openShulker = Keybind().name("Открыть мистик").enName("Open Chest").defaultValue(-1).build();
+    private final DoubleSetting distance = Double().name("Дистанция").enName("Open Distance").defaultValue(3.3).max(6).min(0).visible(() -> openShulker.get() != -1).build();
 
     private long time;
 
@@ -57,6 +242,10 @@ public class ChestStealer extends Function {
     @Override
     public void onKeybindSetting(KeybindSettingEvent event) {
         if (event.action == InputUtils.Action.PRESS) {
+            if (openGui.key(event.key, !event.mouse)) {
+                mc.openScreen(ChestStealerGui.getInstance());
+                return;
+            }
             if (!openShulker.key(event.key, !event.mouse)) return;
             for (int i = -5; i < 5; i++) {
                 for (int j = -5; j < 5; j++) {
@@ -93,7 +282,7 @@ public class ChestStealer extends Function {
             Inventory inventory = containerScreen.getInventory();
 
             if (inventory.isEmpty()) {
-                mc.player.closeScreen();
+                mc.player.closeHandledScreen();
                 return;
             }
 
