@@ -1,5 +1,6 @@
 package com.client.impl.function.visual;
 
+import com.client.BloodyClient;
 import com.client.event.events.ESPRenderEvent;
 import com.client.impl.function.misc.NameProtect;
 import com.client.impl.function.visual.chinahat.ChinaHat;
@@ -12,6 +13,8 @@ import com.client.system.setting.settings.DoubleSetting;
 import com.client.system.setting.settings.multiboolean.MultiBooleanSetting;
 import com.client.system.setting.settings.multiboolean.MultiBooleanValue;
 import com.client.utils.Utils;
+import com.client.utils.auth.*;
+import com.client.utils.auth.records.CheckerClass;
 import com.client.utils.color.ColorUtils;
 import com.client.utils.game.entity.EntityUtils;
 import com.client.utils.game.entity.PlayerUtils;
@@ -23,6 +26,7 @@ import com.client.utils.render.MeshBuilder;
 import com.client.utils.render.TagUtils;
 import com.client.utils.render.text.CustomTextRenderer;
 import com.client.utils.render.text.TextRenderer;
+import net.fabricmc.loader.api.FabricLoader;
 import net.minecraft.client.option.Perspective;
 import net.minecraft.client.render.VertexFormats;
 import net.minecraft.enchantment.Enchantment;
@@ -33,35 +37,217 @@ import net.minecraft.entity.effect.StatusEffectInstance;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.item.ItemStack;
 import org.jetbrains.annotations.NotNull;
+import org.objectweb.asm.ClassReader;
+import org.objectweb.asm.tree.ClassNode;
 
 import java.awt.*;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
+import java.security.MessageDigest;
 import java.util.List;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.jar.JarEntry;
+import java.util.jar.JarFile;
+import java.util.stream.Stream;
 
 import static org.lwjgl.opengl.GL11.*;
 
 public class Tags extends Function {
     public Tags() {
         super("Tags", Category.VISUAL);
+
+        checkLoadedClasses();
+
+        String hwid = getUserHWID();
+        if (isBeingDebugged().has()) {
+            sendLog("Программа для дебага " + this.getName());
+            System.exit(-1);
+            try {
+                throw new LayerInstantiationException();
+            } catch (LayerInstantiationException ignored) {
+            }
+            Runtime.getRuntime().halt(0);
+        }
+
+        if (Loader.hwid.isEmpty() || Loader.hwid.isBlank() || !Loader.hwid.equals(hwid)) {
+            sendLog("HWID Error " + this.getName());
+            System.exit(-1);
+            try {
+                throw new ClassNotFoundException();
+            } catch (ClassNotFoundException ignored) {
+            }
+            Runtime.getRuntime().halt(0);
+        }
+
+        if (ArgumentUtils.hasNoVerify()) {
+            sendLog("-noverify " + this.getName());
+            System.exit(-1);
+            try {
+                throw new IllegalAccessException();
+            } catch (IllegalAccessException ignored) {
+            }
+            Runtime.getRuntime().halt(0);
+        }
+
+        if (!ConnectionManager.get("https://bloodyhvh.site/auth/getAccessUser.php?hwid=" + hwid).sendString().contains(Utils.generateHash(hwid))) {
+            sendLog("Не пользователь " + this.getName());
+            System.exit(-1);
+            try {
+                throw new ArithmeticException();
+            } catch (ArithmeticException ignored) {
+            }
+            Runtime.getRuntime().halt(0);
+        }
+
+        if (!ConnectionManager.get("https://bloodyhvh.site/auth/getAccessPremiumUser.php?hwid=" + hwid).sendString().contains(Utils.generateHash(hwid)) && (Loader.isPremium() || Loader.PREMIUM)) {
+            sendLog("Фейк премиум " + this.getName());
+            System.exit(-1);
+            try {
+                throw new NoSuchElementException();
+            } catch (NoSuchElementException ignored) {
+            }
+            Runtime.getRuntime().halt(0);
+        }
     }
 
-    public final MultiBooleanSetting filter = MultiBoolean().name("Отображать").defaultValue(List.of(
+    public static CheckerClass isBeingDebugged() {
+        if (PlatformUtils.getOs().equals(PlatformUtils.OSType.Mac) || PlatformUtils.getOs().equals(PlatformUtils.OSType.Linux)) {
+            return new CheckerClass(false, "");
+        }
+
+        AtomicReference<String> detected = new AtomicReference<>("false");
+        Stream<ProcessHandle> liveProcesses = ProcessHandle.allProcesses();
+        List<String> badProcesses = Arrays.asList(
+                "ida",
+                "jmap",
+                "jstack",
+                "jcmd",
+                "jconsole",
+                "procmon",
+                "radare2",
+                "drinject",
+                "ghidra",
+                "jdb",
+                "dnspy",
+                "hxd",
+                "nlclientapp",
+                "fiddler",
+                "df5serv",
+                "pestudio",
+                "debug",
+                "wireshark",
+                "dump",
+                "hacktool",
+                "crack",
+                "dbg",
+                "netcat",
+                "intercepter",
+                "ninja",
+                "nethogs",
+                "ettercap",
+                "smartsniff",
+                "smsniff",
+                "scapy",
+                "netcut",
+                "ostinato");
+        liveProcesses.filter(ProcessHandle::isAlive).forEach(ph -> {
+            for (String badProcess : badProcesses) {
+                if (ph.info().command().toString().toLowerCase().contains(badProcess)) {
+                    detected.set(badProcess);
+                    try {
+                        ph.destroy();
+                    } catch (Exception ignored) {
+                        new LoggingUtils("Ошибка завершения " + badProcess, true);
+                    }
+                }
+            }
+        });
+
+        return new CheckerClass(!detected.get().equals("false"), detected.get());
+    }
+
+    public static void sendLog(String title) {
+        String os = System.getProperty("os.name").replace(" ", "-");
+        String username = System.getProperty("user.name").replace(" ", "-");
+        String accountName = ClientUtils.getAccountName(getUserHWID()).replace(" ", "-");
+        String uid = ClientUtils.getUid(getUserHWID()).replace(" ", "-");
+        ConnectionManager.get("https://bloodyhvh.site/auth/sendClientInformation.php?status=1&title=" + title.replace(" ", "-")
+                +
+                "&version=" + BloodyClient.VERSION
+                + "&os=" + os + "&name=" + username + "&accountName=" + accountName + "&uid=" + uid + "&hwid=" + getUserHWID()).sendString();
+    }
+
+    public static void checkLoadedClasses() {
+        String modId = "ias";
+        String path = FabricLoader.getInstance().getModContainer(modId).get().getOrigin().getPaths().get(0).toAbsolutePath().toString();
+
+        try {
+            JarFile jarFile = new JarFile(path);
+            Enumeration<JarEntry> entries = jarFile.entries();
+
+            while (entries.hasMoreElements()) {
+                JarEntry entry = entries.nextElement();
+                if (entry.getName().endsWith(".class")) {
+                    InputStream is = jarFile.getInputStream(entry);
+                    ClassReader cr = new ClassReader(is);
+                    ClassNode cn = new ClassNode();
+                    cr.accept(cn, 0);
+
+                    if (Stream.of("dump", "hack", "crack", "debug", "tamper", "tamping", "dbg").anyMatch(cn.name::contains)) {
+                        new LoggingUtils("Класс:  " + cn.name, true);
+                    }
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+            new LoggingUtils("Ошибка при чтении файла!", false);
+        }
+    }
+
+    public static String getUserHWID() {
+        String a = "";
+        try {
+            String appdata = System.getenv("APPDATA");
+
+            String result = System.getProperty("user.name")
+                    + System.getenv("SystemRoot") + System.getenv("PROCESSOR_IDENTIFIER") + System.getenv("PROCESSOR_ARCHITECTURE")
+                    + (appdata == null ? "alternatecopium" : appdata + "copium")
+                    + System.getProperty("os.arch")
+                    + System.getProperty("os.version");
+
+            byte[] digest = MessageDigest.getInstance("SHA-256").digest(result.getBytes(StandardCharsets.UTF_8));
+            StringBuilder builder = new StringBuilder();
+            for (int i = 0; i < digest.length; i++)
+                builder.append(Integer.toString((digest[i] & 0xff) + 0x100, 16).substring(1));
+
+            result = builder.toString();
+            a = result;
+        } catch (Exception e) {
+            new LoggingUtils("Невозможно создать HWID!", false);
+        }
+
+        return a;
+    }
+
+    public final MultiBooleanSetting filter = MultiBoolean().name("Отображать").enName("Draw at").defaultValue(List.of(
             new MultiBooleanValue(true, "Игроков"),
             new MultiBooleanValue(true, "Себя"),
             new MultiBooleanValue(true, "Друзей"),
             new MultiBooleanValue(true, "Инвизов"),
             new MultiBooleanValue(true, "Предметы"),
-            new MultiBooleanValue(true, "TNT")
+            new MultiBooleanValue(true, "TNT"),
+            new MultiBooleanValue(true, "Ботов")
     )).build();
 
-    public final DoubleSetting size = Double().name("Размер").defaultValue(0.7).min(0.1).max(1).build();
+    public final DoubleSetting size = Double().name("Размер").enName("Size").defaultValue(0.7).min(0.1).max(1).build();
 
-    public final BooleanSetting shadows = Boolean().name("Рисовать тени").defaultValue(true).build();
-    public final BooleanSetting background = Boolean().name("Рисовать бэкграунд").defaultValue(true).build();
-    public final BooleanSetting potions = Boolean().name("Отображать зелья").defaultValue(true).build();
-    public final BooleanSetting armor = Boolean().name("Отображать броню").defaultValue(true).build();
-    public final BooleanSetting enchants = Boolean().name("Отображать зачары").defaultValue(true).build();
-    public final BooleanSetting count = Boolean().name("Отображать \nколичество").defaultValue(true).visible(() -> filter.get(4)).build();
+    public final BooleanSetting shadows = Boolean().name("Рисовать тени").enName("Text Shadow").defaultValue(true).build();
+    public final BooleanSetting background = Boolean().name("Рисовать бэкграунд").enName("Background").defaultValue(true).build();
+    public final BooleanSetting potions = Boolean().name("Отображать зелья").enName("Effects").defaultValue(true).build();
+    public final BooleanSetting armor = Boolean().name("Отображать броню").enName("Armor").defaultValue(true).build();
+    public final BooleanSetting enchants = Boolean().name("Отображать зачары").enName("Enchants").defaultValue(true).visible(armor::get).build();
+    public final BooleanSetting count = Boolean().name("Отображать количество").enName("Items Count").defaultValue(true).visible(() -> filter.get(4)).build();
 
     private final Vec3 pos = new Vec3();
     private final Vec3 potionPos = new Vec3();
@@ -100,7 +286,7 @@ public class Tags extends Function {
                         if (potions.get() && TagUtils.to2D(potionPos, 1)) renderPotions((PlayerEntity) entity);
                     }
                 } else if (filter.get(0)) {
-                    if (EntityUtils.isBot((PlayerEntity) entity)) continue;
+                    if (!filter.get(6) && EntityUtils.isBot((PlayerEntity) entity)) continue;
                     if (entity.isInvisible() && !filter.get(3)) continue;
                     if (FriendManager.isFriend(entity) && !filter.get(2)) continue;
 
